# debugger

./: .gitignore  .travis.yml  Makefile.am  Makefile.in  PackageInfo.g  README.md  autogen.sh  configure.ac  init.g  makedoc.g  read.g
.github/workflows/: CI.yml
_data/: package.yml
doc/: Tutorials.xml  chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap1_mj.html  chap2.html  chap2.txt  chap2_mj.html  chapInd.html  chapInd.txt  chapInd_mj.html
gap/: debugger.gd  debugger.gi
src/: debugger.cc
src/gap_cpp_headers/: gap_cpp_mapping.hpp  gap_prototypes.hpp  gap_wrapping.hpp  include_gap_headers.hpp
tst/: basic.tst  basic2.tst  basicnofunc.tst  clear.tst  if.tst  step.tst  stepif.tst  stepifnext.tst  stepnext.tst  testall.g  testcode1.g  testcode2.g  testif.g
